codex-rs/tui/src/snapshots/codex_tui__hardware__tests__hardware_panel_renders_cpu_and_gpu_temperatures.snap
---
source: tui/src/hardware_tests.rs
assertion_line: 65
expression: text
---
│ Hardware                   
│ CPU                        
│ Apple M5                   
│ Usage  23%                 
│ Temp   43 °C               
│                            
│ RAM                        
│ 16.0 / 32.0 GiB            
│                            
│ GPU                        
│ Apple M5                   
│ Usage  58%                 
│ Temp   43 °C               
│                            
│ System-wide measurements   
│ N/A: sensor unavailable    
│                            
│
