codex-rs/tui/src/snapshots/codex_tui__hardware__tests__hardware_panel_renders_real_values_and_missing_sensors.snap
---
source: tui/src/hardware_tests.rs
assertion_line: 10
expression: text
---
│ Hardware                   
│ CPU                        
│ Apple M5                   
│ Usage  23%                 
│ Temp   N/A                 
│                            
│ RAM                        
│ 16.0 / 32.0 GiB            
│                            
│ GPU                        
│ Apple M5                   
│ Usage  58%                 
│ Temp   N/A                 
│                            
│ System-wide measurements   
│ N/A: sensor unavailable    
│                            
│
